--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -1,8 +1,6 @@
 \subsection{\XCID instructions}
 \label{sec:spec:instr}
 
-% TODO: mnemonic prefix/suffix rules
-
 % =============================================================================
 
 \subsubsection{Class-$1$:   baseline}
@@ -10,7 +8,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{XCR2GPR}{rd, crs1}{
+\XCINSTR{xc.xcr2gpr}{rd, crs1}{
   \iencxcrtwogpr
 }{
   Move a $\XCR$ register to a $\GPR$ register.
@@ -20,7 +18,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{GPR2XCR}{crd, rs1}{
+\XCINSTR{xc.gpr2xcr}{crd, rs1}{
   \iencgprtwoxcr
 }{
   Move a $\GPR$ register to a $\XCR$ register.
@@ -30,7 +28,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{CMOV}{crd, crs1, crs2}{
+\XCINSTR{xc.cmov}{crd, crs1, crs2}{
   \ienccmov
 }{
   Conditionally move one $\XCR$ register to another.
@@ -42,7 +40,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{CMOVN}{crd, crs1, crs2}{
+\XCINSTR{xc.cmovn}{crd, crs1, crs2}{
   \ienccmov
 }{
   Conditionally move one $\XCR$ register to another.
@@ -54,49 +52,100 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{LD.BU}{crd, h, b, imm11(rs1)}{
+\XCINSTR{xc.ld.bu}{crd, h, b, imm11(rs1)}{
   \iencldbu
 }{
   Load a     byte from memory
   into a specific     byte of a $\XCR$ register,
-  leaving the other     bytes in said register un-modified.
+  leaving the other     bytes in said register un-modified
+  (cf. \VERB[RV]{xc.ld.b}, which sets them to zero).
 }{
-  $addr                                                                    \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS \VERB[RV]{cd}} \ASN \MEM[*][{addr  }]$ \;
+  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
+  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 0$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr  }]$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{LD.HU}{crd, h,    imm11(rs1)}{
+\XCINSTR{xc.ld.hu}{crd, h,    imm11(rs1)}{
   \iencldhu
 }{
   Load a halfword from memory
   into a specific halfword of a $\XCR$ register,
-  leaving the other halfword  in said register un-modified.
+  leaving the other halfword  in said register un-modified
+  (cf. \VERB[RV]{xc.ld.h}, which sets it   to zero).
 }{
   $addr                                                                    \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS             0} \ASN \MEM[*][{addr+0}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS             1} \ASN \MEM[*][{addr+1}]$ \;
+  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 0$ \;
+  $index_1                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 1$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr+0}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN \MEM[*][{addr+1}]$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{LD.W}{crd,        imm11(rs1)}{
+\XCINSTR{xc.ld.b} {crd, h, b, imm11(rs1)}{
+  \iencldbu
+}{
+  Load a     byte from memory
+  into a specific     byte of a $\XCR$ register,
+  setting all other     bytes in said register to zero
+  (cf. \VERB[RV]{xc.ld.bu}, which leaves them un-modified).
+}{
+  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
+  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 0$ \;
+  $index_1                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 1$ \;
+  $index_2                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 2$ \;
+  $index_3                                       \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 3$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr  }]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN 0                $ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2} \ASN 0                $ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3} \ASN 0                $ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.ld.h} {crd, h,    imm11(rs1)}{
+  \iencldhu
+}{
+  Load a halfword from memory
+  into a specific halfword of a $\XCR$ register,
+  setting the other halfword  in said register to zero
+  (cf. \VERB[RV]{xc.ld.hu}, which leaves it   un-modified).
+}{
+  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
+  $index_0                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 0$ \;
+  $index_1                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 1$ \;
+  $index_2                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 2$ \;
+  $index_3                                       \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 3$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr+0}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN \MEM[*][{addr+1}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2} \ASN 0                $ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3} \ASN 0                $ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.ld.w} {crd,        imm11(rs1)}{
   \iencldw
 }{
   Load a     word from memory 
   into                        a $\XCR$ register.
 }{
-  $addr                                                                    \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                0} \ASN \MEM[*][{addr+0}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                1} \ASN \MEM[*][{addr+1}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                2} \ASN \MEM[*][{addr+2}]$ \;
-  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                3} \ASN \MEM[*][{addr+3}]$ \;
+  $addr                                          \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
+  $index_0                                       \ASN                                            0$ \;
+  $index_1                                       \ASN                                            1$ \;
+  $index_2                                       \ASN                                            2$ \;
+  $index_3                                       \ASN                                            3$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0} \ASN \MEM[*][{addr+0}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1} \ASN \MEM[*][{addr+1}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2} \ASN \MEM[*][{addr+2}]$ \;
+  $\INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3} \ASN \MEM[*][{addr+3}]$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{ST.B}{rs2, h, b, imm11(rs1)}{
+\XCINSTR{xc.st.b} {rs2, h, b, imm11(rs1)}{
   \iencstb
 }{
   Store a specific     byte of a $\XCR$ register into memory.
@@ -106,12 +155,13 @@
   $
 }{
   $addr            \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\MEM[*][addr  ] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS \VERB[RV]{cd}}$ \;
+  $index_0         \ASN ( \VERB[RV]{cc} \CONS \VERB[RV]{cd} ) \XOR 0$ \;
+  $\MEM[*][addr  ] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0}$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{ST.H}{rs2, h,    imm11(rs1)}{
+\XCINSTR{xc.st.h} {rs2, h,    imm11(rs1)}{
   \iencsth
 }{
   Store a specific halfword of a $\XCR$ register into memory.
@@ -121,13 +171,15 @@
   $
 }{
   $addr            \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\MEM[*][addr+0] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS             0}$ \;
-  $\MEM[*][addr+1] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{cc} \CONS             1}$ \;
+  $index_0         \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 0$ \;
+  $index_1         \ASN ( \VERB[RV]{cc} \CONS             0 ) \XOR 1$ \;
+  $\MEM[*][addr+0] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0}$ \;
+  $\MEM[*][addr+1] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1}$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{ST.W}{rs2,       imm11(rs1)}{
+\XCINSTR{xc.st.w} {rs2,       imm11(rs1)}{
   \iencstw
 }{
   Store                        a $\XCR$ register into memory.
@@ -136,11 +188,15 @@
   \VERB[RV]{imm11} = \VERB[RV]{imm11hi} \CONS \VERB[RV]{imm11lo} .
   $
 }{
- $addr             \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
-  $\MEM[*][addr+0] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                0}$ \;
-  $\MEM[*][addr+1] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                1}$ \;
-  $\MEM[*][addr+2] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                2}$ \;
-  $\MEM[*][addr+3] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{                                3}$ \;
+  $addr            \ASN \GPR[*][{\VERB[RV]{rs1}}] + \EXT[32]{\pm}( \VERB[RV]{imm11} )$ \;
+  $index_0         \ASN                                            0$ \;
+  $index_1         \ASN                                            1$ \;
+  $index_2         \ASN                                            2$ \;
+  $index_3         \ASN                                            3$ \;
+  $\MEM[*][addr+0] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_0}$ \;
+  $\MEM[*][addr+1] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_1}$ \;
+  $\MEM[*][addr+2] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_2}$ \;
+  $\MEM[*][addr+3] \ASN \INDEX[8]{\XCR[*][{\VERB[RV]{crd}}]}{index_3}$ \;
 }
 
 % =============================================================================
@@ -148,9 +204,11 @@
 \subsubsection{Class-$2.1$: randomness}
 \label{sec:spec:instr:2:1}
 
+% TODO: rngtest
+
 % -----------------------------------------------------------------------------
 
-\XCINSTR{RNGSEED}{crs1}{
+\XCINSTR{xc.rngseed}{crs1}{
   \iencrngseed
 }{
   Inject (or seed) $32$-bits of entropy into the RNG, reading from a $\XCR$ register.
@@ -160,7 +218,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{RNGSAMP}{crd}{
+\XCINSTR{xc.rngsamp}{crd}{
   \iencrngsamp
 }{
   Sample           $32$-bits of entropy from the RNG, writing to   a $\XCR$ register.
@@ -175,7 +233,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{SCATTER.b}{crd, rs2, crs2}{
+\XCINSTR{xc.scatter.b}{crd, rs2, crs2}{
   \iencscatterb
 }{
 
@@ -192,7 +250,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{SCATTER.h}{crd, rs2, crs2}{
+\XCINSTR{xc.scatter.h}{crd, rs2, crs2}{
   \iencscatterh
 }{
 
@@ -207,7 +265,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{GATHER.b}{crd, rs1, crs2}{
+\XCINSTR{xc.gather.b}{crd, rs1, crs2}{
   \iencgatherb
 }{
 
@@ -224,7 +282,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{GATHER.h}{rd, rs1, crs2}{
+\XCINSTR{xc.gather.h}{rd, rs1, crs2}{
   \iencgatherh
 }{
 
@@ -242,7 +300,7 @@
 \subsubsection{Class-$2.3$: bit-oriented}
 \label{sec:spec:instr:2:3}
 
-\XCINSTR{LD.LI}{crd, imm16}{
+\XCINSTR{xc.ld.li}{crd, imm16}{
   \iencldli
 }{
   Load an immediate halfword
@@ -258,7 +316,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{LD.HI}{crd, imm16}{
+\XCINSTR{xc.ld.hi}{crd, imm16}{
   \iencldhi 
 }{
   Load an immediate halfword
@@ -274,7 +332,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{BOP}{crd, crs1, crs2, lut4}{
+\XCINSTR{xc.bop}{crd, crs1, crs2, lut4}{
   \iencbop
 }{
   Compute the $i$-bit of a result by apply a $2$-input, $1$-output Boolean 
@@ -304,7 +362,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{EXT}{crd, crs, cs, cl}{
+\XCINSTR{xc.ext}{crd, crs, cs, cl}{
   \iencext
 }{
   Extract a contiguous sequences of $2$-bit crumbs 
@@ -318,7 +376,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{INS}{crd, crs, cs, cl}{
+\XCINSTR{xc.ins}{crd, crs, cs, cl}{
   \iencins
 }{
   Extract a contiguous sequences of $2$-bit crumbs 
@@ -332,7 +390,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MIX.l}{rd, rs1, rs2, rtamt}{
+\XCINSTR{xc.mix.l}{rd, rs1, rs2, rtamt}{
   \iencmixl
 }{
   Form a result by mix together bits from two operands based on a mask:
@@ -360,7 +418,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MIX.h}{rd, rs1, rs2, rtamt}{
+\XCINSTR{xc.mix.h}{rd, rs1, rs2, rtamt}{
   \iencmixh
 }{
   Form a result by mix together bits from two operands based on a mask:
@@ -418,7 +476,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PADD}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.padd}{pw, crd, crs1, crs2}{
   \iencpadd
 }{
   Compute a   register-based packed addition, 
@@ -436,7 +494,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PSUB}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.psub}{pw, crd, crs1, crs2}{
   \iencpsub
 }{
   Compute a   register-based packed subtraction, 
@@ -454,25 +512,95 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PMUL.l}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.pmul.l}{pw, crd, crs1, crs2}{
   \iencpmull
 }{
-  Compute a   register-based packed multiplication, 
+  Compute a   register-based packed multiplication,
   implying $\odot = \times$.
   Note that, wrt. the encoding,
   $
-  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} .
+  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
   $
+  and that this instruction captures the  ``low'' half, or $w$ LSBs of 
+  each computed product
+  (cf. \VERB[RV]{xc.pmul.h},   which captures the ``high'' half, or $w$ MSBs).
 }{
   $w = 32 / \VERB[RV]{n}$ \;
   \For{$i = 0$ {\bf upto} $\VERB[RV]{n} - 1$}{
-    $\INDEX[w]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[w][u]{\times} \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
+    $t \ASN \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[w][u]{ \times} \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
+    $\INDEX[w]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN t_{        w - 1 \RANGE 0}$ \;
   }
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PSLL}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.pmul.h}{pw, crd, crs1, crs2}{
+  \iencpmulh
+}{
+  Compute a   register-based packed multiplication,
+  implying $\odot = \times$.
+  Note that, wrt. the encoding,
+  $
+  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  $
+  and that this instruction captures the ``high'' half, or $w$ MSBs of 
+  each computed product
+  (cf. \VERB[RV]{xc.pmul.l},   which captures the  ``low'' half, or $w$ LSBs).
+}{
+  $w = 32 / \VERB[RV]{n}$ \;
+  \For{$i = 0$ {\bf upto} $\VERB[RV]{n} - 1$}{
+    $t \ASN \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[w][u]{ \times} \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
+    $\INDEX[w]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN t_{2 \cdot w - 1 \RANGE w}$ \;
+  }
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.pclmul.l}{pw, crd, crs1, crs2}{
+  \iencpclmull
+}{
+  Compute a   register-based packed multiplication in $\F_2[\IND]$ (or ``carry-less'' multiplication),
+  implying $\odot = \otimes$.
+  Note that, wrt. the encoding,
+  $
+  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  $
+  and that this instruction captures the  ``low'' half, or $w$ LSBs of 
+  each computed product
+  (cf. \VERB[RV]{xc.pclmul.h}, which captures the ``high'' half, or $w$ MSBs).
+}{
+  $w = 32 / \VERB[RV]{n}$ \;
+  \For{$i = 0$ {\bf upto} $\VERB[RV]{n} - 1$}{
+    $t \ASN \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[w][u]{\otimes} \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
+    $\INDEX[w]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN t_{        w - 1 \RANGE 0}$ \;
+  }
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.pclmul.h}{pw, crd, crs1, crs2}{
+  \iencpclmulh
+}{
+  Compute a   register-based packed multiplication in $\F_2[\IND]$ (or ``carry-less'' multiplication),
+  implying $\odot = \otimes$.
+  Note that, wrt. the encoding,
+  $
+  \VERB[RV]{n} = \VERB[RV]{ca} \CONS \VERB[RV]{cb} \CONS \VERB[RV]{cc} ,
+  $
+  and that this instruction captures the ``high'' half, or $w$ MSBs of 
+  each computed product
+  (cf. \VERB[RV]{xc.pclmul.l}, which captures the  ``low'' half, or $w$ LSBs).
+}{
+  $w = 32 / \VERB[RV]{n}$ \;
+  \For{$i = 0$ {\bf upto} $\VERB[RV]{n} - 1$}{
+    $t \ASN \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[w][u]{\otimes} \INDEX[w]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
+    $\INDEX[w]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN t_{2 \cdot w - 1 \RANGE w}$ \;
+  }
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.psll}{pw, crd, crs1, crs2}{
   \iencpsll
 }{
   Compute a   register-based packed left-shift,
@@ -499,7 +627,7 @@ $
 % -----------------------------------------------------------------------------
 
 % TODO: cshamt => pshamt ?
-\XCINSTR{PSLL.i}{pw, crd, crs1, cshamt}{
+\XCINSTR{xc.psll.i}{pw, crd, crs1, cshamt}{
   \iencpslli
 }{
   Compute an immediate-based packed left-shift,
@@ -525,7 +653,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PSRL}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.psrl}{pw, crd, crs1, crs2}{
   \iencpsrl
 }{
   Compute a   register-based packed right-shift,
@@ -552,7 +680,7 @@ $
 % -----------------------------------------------------------------------------
 
 % TODO: cshamt => pshamt ?
-\XCINSTR{PSRL.i}{pw, crd, crs1, cshamt}{
+\XCINSTR{xc.psrl.i}{pw, crd, crs1, cshamt}{
   \iencpsrl
 }{
   Compute an immediate-based packed left-shift,
@@ -578,7 +706,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PROT}{pw, crd, crs1, crs2}{
+\XCINSTR{xc.prot}{pw, crd, crs1, crs2}{
   \iencprot
 }{
   Compute a   register-based packed left-rotate,
@@ -600,7 +728,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PROT.i}{pw, crd, crs1, cshamt}{
+\XCINSTR{xc.prot.i}{pw, crd, crs1, cshamt}{
   \iencproti
 }{
   Compute an immediate-based packed left-rotate,
@@ -622,7 +750,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PPERM.W}{crd, crs1, b0, b1, b2, b3}{
+\XCINSTR{xc.pperm.w}{crd, crs1, b0, b1, b2, b3}{
   \iencppermw
 }{
   Permute bytes   of               some $\XCR$ register,
@@ -637,7 +765,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PPERM.Hx}{crd, crs1, b0, b1, b2, b3}{
+\XCINSTR{xc.pperm.hx}{crd, crs1, b0, b1, b2, b3}{
   \iencppermhzero
   \iencppermhone
 }{
@@ -658,7 +786,7 @@ $
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{PPERM.Bx}{crd, crs1, b0, b1, b2, b3}{
+\XCINSTR{xc.pperm.bx}{crd, crs1, b0, b1, b2, b3}{
   \iencppermbzero
   \iencppermbone
   \iencppermbtwo
@@ -716,7 +844,11 @@ Concretely then, this means
 \VERB[RV]{crdm} &=& \RADIX{111}{2} &\mapsto& ( & \VERB[RV]{crd2} &=& 15 &,& \VERB[RV]{crd1} &=& 14 & ) \\
 \end{array}
 \]
-where
+i.e.,
+\[
+\VERB[RV]{crdm} = x ~~\mapsto~~ \TUPLE{ \VERB[RV]{crd2} = x \CONS 1 , \VERB[RV]{crd1} = x \CONS 0 } ,
+\]
+noting
 $\TUPLE{ 1, 0 }$ and $\TUPLE{ 3, 2 }$ are deemed valid pairs,
 $\TUPLE{ 3, 0 }$ is invalid because it violates the contiguousness rule,
 $\TUPLE{ 2, 3 }$ is invalid because it violates the contiguousness rule,
@@ -725,7 +857,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MADD.2}{(crd2, crd1), crs1, crs2      }{
+\XCINSTR{xc.madd.2}{(crd2, crd1), crs1, crs2      }{
   \iencmaddtwo
 }{
   Compute a   register-based multi-precision (or ``long'') addition:
@@ -749,7 +881,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MADD.3}{(crd2, crd1), crs1, crs2, crs3}{
+\XCINSTR{xc.madd.3}{(crd2, crd1), crs1, crs2, crs3}{
   \iencmaddthree
 }{
   Compute a   register-based multi-precision (or ``long'') addition:
@@ -775,7 +907,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MSUB.2}{(crd2, crd1), crs1, crs2      }{
+\XCINSTR{xc.msub.2}{(crd2, crd1), crs1, crs2      }{
   \iencmsubtwo
 }{
   Compute a   register-based multi-precision (or ``long'') subtraction:
@@ -798,7 +930,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MSUB.3}{(crd2, crd1), crs1, crs2, crs3}{
+\XCINSTR{xc.msub.3}{(crd2, crd1), crs1, crs2, crs3}{
   \iencmsubthree
 }{
   Compute a   register-based multi-precision (or ``long'') subtraction:
@@ -823,7 +955,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MACC.1}{(crd2, crd1), crs1      }{
+\XCINSTR{xc.macc.1}{(crd2, crd1), crs1      }{
   \iencmaccone
 }{
   Compute a   register-based multi-precision (or ``long'') accumulation,
@@ -846,7 +978,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MACC.2}{(crd2, crd1), crs1, crs2}{
+\XCINSTR{xc.macc.2}{(crd2, crd1), crs1, crs2}{
   \iencmacctwo
 }{
   Compute a   register-based multi-precision (or ``long'') accumulation,
@@ -872,7 +1004,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MMUL.1}{(crd2, crd1), crs1, crs2, crs3}{
+\XCINSTR{xc.mmul.1}{(crd2, crd1), crs1, crs2, crs3}{
   \iencmmulone
 }{
   Compute a   register-based multi-precision (or ``long'') multiply-accumulate:
@@ -892,15 +1024,43 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
   \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd2}, \VERB[RV]{crd1} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\times} \XCR[*][{\VERB[RV]{crs2}}] ) 
-                                                                \OP[64][u]{+}      \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{ \times} \XCR[*][{\VERB[RV]{crs2}}] ) 
+                                                                \OP[64][u]{ +}      \XCR[*][{\VERB[RV]{crs3}}]$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN \INDEX{t}{31 \RANGE  0}$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN \INDEX{t}{64 \RANGE 32}$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MSLL}{(crd2, crd1), crs1, crs2, crs3}{
+\XCINSTR{xc.mclmul.1}{(crd2, crd1), crs1, crs2, crs3}{
+  \iencmclmulone
+}{
+  Compute a   register-based multi-precision (or ``long'') multiply-accumulate in $\F_2[\IND]$:
+  the $32$-bit multiplicands
+  $\XCR[*][{\VERB[RV]{crs1}}]$
+  and
+  $\XCR[*][{\VERB[RV]{crs2}}]$
+  are first used to form a $64$-bit product captured by
+  $\XCR[*][{\VERB[RV]{crd1}}]$ (the LSBs)
+  and
+  $\XCR[*][{\VERB[RV]{crd2}}]$ (the MSBs),
+  into which the $32$-bit addend
+  $\XCR[*][{\VERB[RV]{crs3}}]$
+  is accumulated.
+  Note that, wrt. the encoding,
+  $
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd2}, \VERB[RV]{crd1} } .
+  $
+}{
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\otimes} \XCR[*][{\VERB[RV]{crs2}}] ) 
+                                                                \OP[64][u]{\oplus}  \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $\XCR[*][{\VERB[RV]{crd1}}] \ASN \INDEX{t}{31 \RANGE  0}$ \;
+  $\XCR[*][{\VERB[RV]{crd2}}] \ASN \INDEX{t}{64 \RANGE 32}$ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{xc.msll}{(crd2, crd1), crs1, crs2, crs3}{
   \iencmsll
 }{
   Compute a   register-based multi-precision (or ``long'')  left-shift:
@@ -933,7 +1093,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 % -----------------------------------------------------------------------------
 
 % TODO: why 4-bit cmshamt?
-\XCINSTR{MSLL.i}{(crd2, crd1), crs1, crs2, shamt}{
+\XCINSTR{xc.msll.i}{(crd2, crd1), crs1, crs2, shamt}{
   \iencmslli
 }{
   Compute an immediate-based multi-precision (or ``long'')  left-shift:
@@ -957,7 +1117,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MSRL}{(crd2, crd1), crs1, crs2, crs3}{
+\XCINSTR{xc.msrl}{(crd2, crd1), crs1, crs2, crs3}{
   \iencmsrl
 }{
   Compute a   register-based multi-precision (or ``long'') right-shift:
@@ -990,7 +1150,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 % -----------------------------------------------------------------------------
 
 % TODO: why 4-bit cmshamt?
-\XCINSTR{MSRL.i}{(crd2, crd1), crs1, crs2, shamt}{
+\XCINSTR{xc.msrl.i}{(crd2, crd1), crs1, crs2, shamt}{
   \iencmsrli
 }{
   Compute an immediate-based multi-precision (or ``long'') right-shift:
@@ -1014,7 +1174,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MEQU}{rd, rs1, crs2, crs3}{
+\XCINSTR{xc.mequ}{rd, rs1, crs2, crs3}{
   \iencmequ
 }{
   Compute a ``chained'' (or ``long'') 
@@ -1031,7 +1191,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MLTE}{rd, rs1, crs2, crs3}{
+\XCINSTR{xc.mlte}{rd, rs1, crs2, crs3}{
   \iencmlte
 }{
   Compute a ``chained'' (or ``long'') 
@@ -1049,7 +1209,7 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MGTE}{rd, rs1, crs2, crs3}{
+\XCINSTR{xc.mgte}{rd, rs1, crs2, crs3}{
   \iencmgte
 }{
   Compute a ``chained'' (or ``long'') 
@@ -1064,5 +1224,32 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
   $t_1 \ASN \XCR[*][{\VERB[RV]{crs2}}] > \XCR[*][{\VERB[RV]{crs3}}]$ \;
   $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1 \IOR ( t_0 \AND \GPR[*][{\VERB[RV]{rs1}}] )$ \;
 }
+
+% -----------------------------------------------------------------------------
+
+\subsubsection{Class-$3.1$: AES encryption}
+\label{sec:spec:instr:3:1}
+
+Per~\cite[Figures 5+6]{SCARV:TilGro:06}, the idea would be to support
+
+\begin{enumerate}
+\item \INST{aes.sub rd0, rd1, rs0, rs1, rs2, rs3}{
+        $\GPR[*][\OPER{rd0}] \ASN \SCOPE{AES}{\ALG{S-box}}( \GPR[*][\OPER{rs1}]_{15,\ldots,12} ) \CONS
+                                  \SCOPE{AES}{\ALG{S-box}}( \GPR[*][\OPER{rs0}]_{11,\ldots, 8} ) \CONS
+                                  \SCOPE{AES}{\ALG{S-box}}( \GPR[*][\OPER{rs1}]_{ 7,\ldots, 4} ) \CONS
+                                  \SCOPE{AES}{\ALG{S-box}}( \GPR[*][\OPER{rs0}]_{ 3,\ldots, 0} )$\;
+      }
+\item \INST{aes.mix rd0, rd1, rs0, rs1, rs2, rs3}{
+        $\GPR[*][\OPER{rd0}] \ASN \SCOPE{AES}{\ALG{Mix-Column}}\big( \GPR[*][\OPER{rs1}]_{15,\ldots,12} ) \CONS
+                                                                     \GPR[*][\OPER{rs1}]_{11,\ldots, 8} ) \CONS
+                                                                     \GPR[*][\OPER{rs0}]_{ 7,\ldots, 4} ) \CONS
+                                                                     \GPR[*][\OPER{rs0}]_{ 3,\ldots, 0} \big)$\;
+      }
+\end{enumerate}
+
+% -----------------------------------------------------------------------------
+
+\subsubsection{Class-$3.2$: AES decryption}
+\label{sec:spec:instr:3:2}
 
 % =============================================================================
