--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -251,6 +251,9 @@
 % concatination
 \newcommandx{\CONS}{\ensuremath{\;\parallel\;}\xspace}
 
+% polynomial indeterminent
+\newcommandx{\IND}[1]{\ensuremath{\mbox{\bf #1}}\xspace}          
+
 % set builder st.
 \newcommandx{\ST}{\ensuremath{\;|\;}\xspace}
 
@@ -269,6 +272,9 @@
 \newcommandx{\AND}{\ensuremath{\wedge}\xspace}
 \newcommandx{\IOR}{\ensuremath{\vee  }\xspace}
 \newcommandx{\XOR}{\ensuremath{\oplus}\xspace}
+
+% round key etc.
+\newcommandx{\ROUND}[2]{\ensuremath{#1}^{(#2)}}                   
 
 % type- or structure-annotated operators
 \newcommandx{\SID}[2][1={}]{#2_{\mathsmaller{#1}}}
