--- a/docs/specification/appx-design.tex
+++ b/docs/specification/appx-design.tex
@@ -201,7 +201,7 @@
       $ 
       0 \leq \VERB[RV]{rtamt} < 16 
       $ 
-      to right-rotate \XCR[*][{\VERB[RV]{crs1}}] by $d$ bits where
+      to right-rotate $\XCR[*][{\VERB[RV]{crs1}}]$ by $d$ bits where
       $0  \leq d < 16$
       and
       $16 \leq d < 32$
@@ -242,5 +242,7 @@
 %%%possessing a cache, programmers must be mindful that these instructions
 %%%can cause odd behaviour due to the non-linear access pattern the instruction
 %%%creates.}
+
+\end{itemize}
 
 % =============================================================================
